Rename branch clean-up pipeline
rename pipeline file and move it under pipelines. Also import the global variables.

--- a/eng/pipelines/branch-cleanup.yml
+++ b/eng/pipelines/branch-cleanup.yml
@@ -16,6 +16,8 @@ jobs:
   - job: CleanUp
     pool:
       vmImage: windows-2019
+    variables:
+      - template: ./templates/variables/globals.yml
     steps:
       - ${{ each repo in parameters.Repos }}:
         - task: PowerShell@2
