Initial scripts and pipeline for stress test discovery/build/push (#1851)
This adds some initial automation to:

1. Log in to various resources (subscription, aks cluster, container registry)
2. Automatically discover all stress tests in a directory
3. Build and push docker images
4. Update and build helm chart dependencies
5. Deploy stress tests to a cluster

The scripts are designed to be run either locally or via CI.

I have some testing to do on the pipeline config, but everything else is fully ready for review.

Resolves https://github.com/Azure/azure-sdk/issues/3168

--- a/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
     - name: network-example
-      image: stresstestregistry.azurecr.io/example/networkexample:v1
       command: ["bash", "poll.sh"]
+      image: {{ default "" .Values.repository }}/network-stress-example:{{ default "v1" .Values.tag }}
       {{- include "stress-test-addons.container-env" . | nindent 6 }}
 {{- end -}}
