--- a/tools/pipeline-generator/ci.yml
+++ b/tools/pipeline-generator/ci.yml
@@ -21,7 +21,7 @@ pr:
     include:
       - tools/pipeline-generator
 
-stages:
-  - template: ../../eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
-    parameters:
-      ToolDirectory: pipeline-generator
+extends:
+  template: /eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+  parameters:
+    ToolDirectory: tools/pipeline-generator
