Move SnippetGenrator to Tools Directory (#1849)
* move SnippetGenrator to tools directory

* SkipDotNetInstall for snippet-generator

* use release configuration for packaging

* Switch to extends template

--- a/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
@@ -36,7 +36,7 @@ stages:
             inputs:
               version: '${{ coalesce( parameters.DotNetCoreVersion, variables.DotNetCoreVersion) }}'
 
-          - script: 'dotnet pack -o $(Build.ArtifactStagingDirectory) -warnaserror'
+          - script: 'dotnet pack -o $(Build.ArtifactStagingDirectory) -warnaserror -c Release'
             displayName: 'Build and Package'
             workingDirectory: $(Build.SourcesDirectory)/${{parameters.ToolDirectory}}
             env:
