--- a/tools/snippet-generator/Azure.Sdk.Tools.SnippetGenerator.Tests/Azure.Sdk.Tools.SnippetGenerator.Tests.csproj
+++ b/tools/snippet-generator/Azure.Sdk.Tools.SnippetGenerator.Tests/Azure.Sdk.Tools.SnippetGenerator.Tests.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SnippetGenerator.csproj" />
+      <ProjectReference Include="..\Azure.Sdk.Tools.SnippetGenerator\Azure.Sdk.Tools.SnippetGenerator.csproj" />
     </ItemGroup>
 
 </Project>
