--- a/tools/snippet-generator/Azure.Sdk.Tools.SnippetGenerator/Azure.Sdk.Tools.SnippetGenerator.csproj
+++ b/tools/snippet-generator/Azure.Sdk.Tools.SnippetGenerator/Azure.Sdk.Tools.SnippetGenerator.csproj
@@ -3,19 +3,11 @@
     <OutputType>Exe</OutputType>
     <Description>Generates code snippets for readmes in the azure-sdk-for-net repo.</Description>
     <TargetFramework>net5.0</TargetFramework>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>snippet-generator</ToolCommandName>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <AssemblyName>Azure.Sdk.Tools.SnippetGenerator</AssemblyName>
   </PropertyGroup>
-
-  <Target Name="CopyBuildOutputIntoPackage" AfterTargets="Build" BeforeTargets="Pack" >
-    <ItemGroup>
-      <None Include="$(OutputPath)\**\*" PackagePath="tools\$(TargetFramework)" Pack="true" />
-    </ItemGroup>
-  </Target>
-
-  <ItemGroup>
-    <Compile Remove="SnippetGenerator.Tests\**" />
-    <EmbeddedResource Remove="SnippetGenerator.Tests\**" />
-    <None Remove="SnippetGenerator.Tests\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
@@ -24,6 +16,5 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.2.1" />
     <PackageReference Include="Microsoft.Build" Version="16.0.461" />
     <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.0.461" />
-    <PackageReference Update="@(PackageReference)" PrivateAssets="All" />
   </ItemGroup>
 </Project>
