--- a/eng/pipelines/mirror-repos.yml
+++ b/eng/pipelines/mirror-repos.yml
@@ -20,14 +20,9 @@ jobs:
           Azure/azure-rest-api-specs:
             TargetRepos: 
               Azure/azure-rest-api-specs:
-                Branch: main
+                Branch: master
               Azure/azure-rest-api-specs-pr:
               azure-sdk/azure-rest-api-specs:
-
-          Azure/azure-rest-api-specs-pr:
-            TargetRepos: 
-              Azure/azure-rest-api-specs-pr:
-                Branch: main
 
           Azure/azure-sdk-for-go:
             TargetRepos: 
