[Test-Proxy] Windows Image, Additional Documentation, Certificate Update. (#1879)
* Lots of documentation updates (around SSL and the like)
* Adding `windows` version of the container, so that our windows machines in devops can load
* Renaming from `ubuntu_testproxy` to `testproxy` because the manifest will figure out which one you need
* Updating the default `pfx` that we install on the docker images to have a password, such that you don't hit issues when you try to import it with `-p ""`. On pshell it can take that as "not passing" a required argument. Lets just avoid that.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,3 +13,4 @@
 /tools/webhook-router/ @weshaggard @praveenkuttappan
 /tools/github-issues/ @weshaggard @praveenkuttappan @AlexGhiondea
 /tools/pipeline-generator/ @weshaggard @benbp
+/tools/test-proxy/ @scbedd @mikeharder
