Move the mock attestation service to azure-sdk-tools (#1882)
## What

- Add `keyvault-mock-attestation` code to the azure-sdk-tools
- Dockerize the code to prepare for adding it to the azsdktools ACR registry.

## Why

This mock service is needed to run live tests for a specific keyvault scenario. While we currently use the 
long-running test fixture that I deployed, that is not a sustainable solution. 

We want to make sure the code for this mock service is in a repo that is owned by Azure SDK team, 
and we want to enable test runs to deploy and tear down everything that need to run live tests. Depending
on a long running test fixture that is in my private repo violates both of these conditions. By moving the 
code here and ensuring that we can push updates to ACR we will be able to deploy the container for every
test run.

--- a/eng/containers/ci.yml
+++ b/eng/containers/ci.yml
@@ -8,6 +8,12 @@ parameters:
     dockerFile: 'tools/test-proxy/docker/dockerfile'
     stableTags:
     - 'latest'
+  - name: mock_attestation
+    pool: 'ubuntu-20.04'
+    dockerRepo: 'keyvault-mock-attestation'
+    dockerFile: 'tools/keyvault-mock-attestation/Dockerfile'
+    stableTags:
+    - 'latest'
   - name: test_proxy_windows
     pool: 'windows-2019'
     dockerRepo: 'engsys/testproxy-win'
@@ -23,6 +29,7 @@ trigger:
     include:
     - eng/containers/
     - tools/test-proxy/docker/
+    - tools/keyvault-mock-attestation/Dockerfile
 
 pr: none
 
