Update stress test template to handle Scenario name and group deployments (#1866)
* [stress test] Support scenario name injection into job/volume properties

* Deploy for stress tests at resource group scope

* Bump stress-test-addons helm version

* Add built-in Values.scenario list handling for stress-test-addons

* [stress test] Fix helm repo indexing to merge with previous index

* [stress test] Automatically compile bicep files in stress test deploy script

--- a/tools/stress-cluster/chaos/examples/network-stress-example/Chart.yaml
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/Chart.yaml
@@ -7,9 +7,9 @@ annotations:
   stressTest: 'true'
   namespace: 'examples'
   example: 'true'
-  test: 'true'
+  hasChaos: 'true'
 
 dependencies:
 - name: stress-test-addons
-  version: 0.1.2
+  version: 0.1.4
   repository: https://stresstestcharts.blob.core.windows.net/helm/
