--- a/tools/stress-cluster/chaos/examples/stress-deployment-example/Chart.yaml
+++ b/tools/stress-cluster/chaos/examples/stress-deployment-example/Chart.yaml
@@ -7,8 +7,9 @@ annotations:
   stressTest: 'true'
   namespace: 'examples'
   example: 'true'
+  hasDeploy: 'true'
 
 dependencies:
 - name: stress-test-addons
-  version: 0.1.2
+  version: 0.1.4
   repository: https://stresstestcharts.blob.core.windows.net/helm/
