Discovery/script path fixes for stress test release pipeline (#1901)
* Checkout/Search 'sdk' directory in stress test release pipeline

* Use script path local to repository

* Sparse checkout from root for stress test release

* Prevent wildcard expansion in git sparse checkout add

--- a/eng/pipelines/stress-test-release.yml
+++ b/eng/pipelines/stress-test-release.yml
@@ -64,14 +64,11 @@ jobs:
     - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
       parameters:
         Repositories:
-          - Name: Azure/azure-sdk-tools
-            Commitish: ${{ parameters.DeployFromBranchOrCommit }}
-            WorkingDirectory: $(System.DefaultWorkingDirectory)/Azure/azure-sdk-tools
           - Name: $(Repository)
             Commitish: ${{ parameters.DeployFromBranchOrCommit }}
             WorkingDirectory: $(System.DefaultWorkingDirectory)/$(Repository)
         Paths:
-          - '/tools'
+          - '/*'
           - '!sdk/**/test-recordings'
           - '!sdk/**/session-records'
           - '!sdk/**/SessionRecords'
@@ -81,7 +78,7 @@ jobs:
       inputs:
         azureSubscription: ${{ parameters.Subscription }}
         scriptType: pscore
-        scriptPath: $(System.DefaultWorkingDirectory)/Azure/azure-sdk-tools/eng/common/scripts/stress-testing/deploy-stress-tests.ps1
+        scriptPath: $(System.DefaultWorkingDirectory)/$(Repository)/eng/common/scripts/stress-testing/deploy-stress-tests.ps1
         arguments:
           -SearchDirectory '$(System.DefaultWorkingDirectory)/$(Repository)'
           -Filters $(Filters)
