[Test-Proxy] eng/common templates (#1909)
Changes in this PR:
- Add test proxy tool and docker invocations to the eng/common yaml.
- Update eng/common with the SSL-related items so they can be trusted by language-specific tooling
- Update documentation and build to reflect new certificate files location.

Ok. @weshaggard I have added a `prepare.ps1` to the `test-proxy/docker` folder. Updated the documentation that refers to the certificate by name/location. Updated the docker build to be able to run the `prepare.ps1` script. 

[Successful Test invocation using these location changes in sdk-for-python](https://dev.azure.com/azure-sdk/playground/_build/results?buildId=1050334&view=results)
[Successful Test container publish](https://dev.azure.com/azure-sdk/internal/_build/results?buildId=1050428&view=logs&j=c370c9e0-ef2e-5a74-495e-4719e52f70ec&t=21eced4c-c8be-5dcb-8a86-9b163bc55754)

--- a/.gitignore
+++ b/.gitignore
@@ -460,6 +460,9 @@ src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/net
 # ensure local debugging of the test-proxy will not end up committed
 tools/test-proxy/**/recordings/
 
+# ensure local build directory for test-proxy dockerfiles remains ignored
+tools/test-proxy/docker/dev_certificate
+
 # local settings
 .DS_Store
 .vscode
