--- a/tools/test-proxy/docker/dockerfile
+++ b/tools/test-proxy/docker/dockerfile
@@ -15,9 +15,9 @@ RUN apt-get update \
 # prep the machine dev certificate
 RUN mkdir $CERT_FOLDER
 
-ADD dev_certificate/$CERT_IMPORT_SH $CERT_FOLDER
-ADD dev_certificate/dotnet-devcert.pfx $CERT_FOLDER
-ADD dev_certificate/dotnet-devcert.crt $CERT_FOLDER
+ADD docker_build/$CERT_IMPORT_SH $CERT_FOLDER
+ADD docker_build/dotnet-devcert.pfx $CERT_FOLDER
+ADD docker_build/dotnet-devcert.crt $CERT_FOLDER
 
 RUN sed -i -e 's/\r$//' $CERT_FOLDER/$CERT_IMPORT_SH
 
@@ -25,12 +25,11 @@ RUN chmod +x $CERT_FOLDER/$CERT_IMPORT_SH \
     && $CERT_FOLDER/$CERT_IMPORT_SH \
     && rm $CERT_FOLDER/$CERT_IMPORT_SH
 
-# install the package
-RUN dotnet tool install azure.sdk.tools.testproxy \
-    --global \
-    --add-source https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json \
-    --version 1.0.0-dev.20210811.2 \
-    && mkdir /etc/testproxy
+# copy the code
+COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
+
+# publish the package
+RUN cd /proxyservercode && dotnet publish -c Release -o /proxyserver -f net5.0
 
 EXPOSE 5001
 EXPOSE 5000
@@ -39,4 +38,4 @@ EXPOSE 5000
 # default URL of localhost:5000 or localhost:50001 are not usable from outside the container
 ENV DOTNET_URLS="http://0.0.0.0:5000;https://0.0.0.0:5001"
 
-ENTRYPOINT ["/root/.dotnet/tools/test-proxy", "--storage-location", "/etc/testproxy"]
+ENTRYPOINT ["/proxyserver/Azure.Sdk.Tools.TestProxy", "--storage-location", "/etc/testproxy"]
