Make "Setup Versioning Properties" cancellable (#1974)
- Continuation of #1967

--- a/tools/daily-dev-build-variable/daily-dev-build-variable.yml
+++ b/tools/daily-dev-build-variable/daily-dev-build-variable.yml
@@ -9,4 +9,4 @@ steps:
     }
     echo "##vso[task.setvariable variable=SetDevVersion]$setDailyDevBuild"
   displayName: "Setup Versioning Properties"
-  condition: eq(variables['SetDevVersion'], '')
+  condition: and(succeeded(), eq(variables['SetDevVersion'], ''))
