--- a/eng/pipelines/tools-repo-versioning.yml
+++ b/eng/pipelines/tools-repo-versioning.yml
@@ -28,13 +28,13 @@ jobs:
         ToolRepo: azure-sdk-tools
         ToolsRepoPath: $(Build.SourcesDirectory)
         Repos:
-          - azure-sdk
-          - azure-sdk-for-android
-          - azure-sdk-for-c
-          - azure-sdk-for-cpp
-          - azure-sdk-for-go
-          - azure-sdk-for-ios
-          - azure-sdk-for-java
-          - azure-sdk-for-js
-          - azure-sdk-for-net
-          - azure-sdk-for-python
+          azure-sdk:
+          azure-sdk-for-android:
+          azure-sdk-for-c:
+          azure-sdk-for-cpp:
+          azure-sdk-for-go:
+          azure-sdk-for-ios:
+          azure-sdk-for-java:
+          azure-sdk-for-js:
+          azure-sdk-for-net:
+          azure-sdk-for-python:
