--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -91,7 +91,7 @@ jobs:
         RepositoryName: azure-sdk-for-cpp
         Prefix: cpp
         PublicOptions: ''
-        # Resource Provisioner is in InternalOptions and not TestOptions becasue C++ includes live tests in the unified pipelines
+        # Resource Provisioner is in InternalOptions and not TestOptions because C++ includes live tests in the unified pipelines
         InternalOptions: >-
           --variablegroup ${{ parameters.Release_Secrets_for_GitHub }}
           --variablegroup ${{ parameters.Release_Secrets_for_GitHubIO_Publishing }}
@@ -102,7 +102,7 @@ jobs:
         RepositoryName: azure-sdk-for-ios
         Prefix: ios
         PublicOptions: ''
-        # Resource Provisioner is in InternalOptions and not TestOptions becasue C++ includes live tests in the unified pipelines
+        # Resource Provisioner is in InternalOptions and not TestOptions because iOS includes live tests in the unified pipelines
         InternalOptions: >-
           --variablegroup ${{ parameters.Release_Secrets_for_GitHub }}
           --variablegroup ${{ parameters.Release_Secrets_for_GitHubIO_Publishing }}
@@ -110,6 +110,17 @@ jobs:
           --variablegroup ${{ parameters.APIReview_AutoCreate_Configurations }}
           --variablegroup ${{ parameters.Secrets_for_Resource_Provisioner }}
           --variablegroup ${{ parameters.AzureSDK_CocoaPods_Release_Pipeline_Secrets}}
+      Go:
+        RepositoryName: azure-sdk-for-go
+        Prefix: go
+        PublicOptions: ''
+        # Resource Provisioner is in InternalOptions and not TestOptions because Go includes live tests in the unified pipelines
+        InternalOptions: >-
+          --variablegroup ${{ parameters.Release_Secrets_for_GitHub }}
+          --variablegroup ${{ parameters.Release_Secrets_for_GitHubIO_Publishing }}
+          --variablegroup ${{ parameters.Secrets_for_DevOps_Notification_Configuration_and_User_Resolution }}
+          --variablegroup ${{ parameters.APIReview_AutoCreate_Configurations }}
+          --variablegroup ${{ parameters.Secrets_for_Resource_Provisioner }}
   steps:
   - template: /eng/common/pipelines/templates/steps/install-pipeline-generation.yml
   - script: |
