[stresswatcher] Improve reconnect, logging, auth, deployment (#2017)
* Add namespace filtering to stress event watcher

* Add stress watcher dockerfile

* Load in cluster config when stress watcher runs in a k8s container

* Add stress watcher ignore annotation

* Add better log handling for stress watcher

* Handle stress watcher re-connect on connection timeout/close

* Add stress watcher deployment and roles to infrastructure templates

* Add Stress.Watcher test pipeline

* Support conditional -warnaserror in dotnet tool test pipeline

--- a/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
@@ -15,9 +15,17 @@ parameters:
   - name: SkipDotNetInstall
     type: boolean
     default: false
+  - name: NoWarn
+    type: boolean
+    default: false
 
 variables:
   - template: ../variables/globals.yml
+  - name: Warn
+    ${{ if parameters.NoWarn }}:
+      value: ''
+    ${{ if not(parameters.NoWarn) }}:
+      value: -warnaserror
 
 stages:
   - stage: BuildTestAndPackage
@@ -30,13 +38,13 @@ stages:
       - job: BuildAndPackage
 
         steps:
-          - task: UseDotNet@2 
+          - task: UseDotNet@2
             condition: eq(${{ parameters.SkipDotNetInstall }}, false)
             displayName: 'Use .NET Core sdk ${{ coalesce( parameters.DotNetCoreVersion, variables.DotNetCoreVersion) }}'
             inputs:
               version: '${{ coalesce( parameters.DotNetCoreVersion, variables.DotNetCoreVersion) }}'
 
-          - script: 'dotnet pack -o $(Build.ArtifactStagingDirectory) -warnaserror -c Release'
+          - script: 'dotnet pack -o $(Build.ArtifactStagingDirectory) $(Warn) -c Release'
             displayName: 'Build and Package'
             workingDirectory: $(Build.SourcesDirectory)/${{parameters.ToolDirectory}}
             env:
@@ -52,7 +60,7 @@ stages:
       - job: Test
 
         steps:
-          - task: UseDotNet@2 
+          - task: UseDotNet@2
             condition: eq(${{ parameters.SkipDotNetInstall }}, false)
             displayName: 'Use .NET Core sdk ${{ coalesce( parameters.DotNetCoreVersion, variables.DotNetCoreVersion) }}'
             inputs:
