--- a/tools/stress-cluster/services/Stress.Watcher/src/Stress.Watcher.csproj
+++ b/tools/stress-cluster/services/Stress.Watcher/src/Stress.Watcher.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="KubernetesClient" Version="6.0.1" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
