--- a/tools/stress-cluster/chaos/examples/stress-deployment-example/Chart.yaml
+++ b/tools/stress-cluster/chaos/examples/stress-deployment-example/Chart.yaml
@@ -4,10 +4,9 @@ description: An example stress test chart for performing azure resource deployme
 version: 0.1.1
 appVersion: v0.1
 annotations:
-  stressTest: 'true'
+  stressTest: 'true'  # enable auto-discovery of this test via `find-all-stress-packages.ps1`
+  example: 'true'  # enable auto-discovery filtering `find-all-stress-packages.ps1 -filters @{example='true'}`
   namespace: 'examples'
-  example: 'true'
-  hasDeploy: 'true'
 
 dependencies:
 - name: stress-test-addons
