--- a/packages/java-packages/snippet-replacer-maven-plugin/pom.xml
+++ b/packages/java-packages/snippet-replacer-maven-plugin/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.azure.tools</groupId>
-  <artifactId>snippet-replacer-maven-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <artifactId>codesnippet-plugin</artifactId>
+  <version>1.0.0-beta.1</version>
   <packaging>maven-plugin</packaging>
   <name>snippet-replacer-maven-plugin Maven Plugin</name>
 
@@ -20,7 +20,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <maven.version>3.3.9</maven.version>
+    <maven.version>3.8.1</maven.version>
   </properties>
 
   <dependencies>
@@ -47,17 +47,17 @@
       <artifactId>maven-compat</artifactId>
       <version>${maven.version}</version>
       <scope>test</scope>
-    </dependency> 
+    </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.6.0</version>
+      <version>3.6.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
