Show version in JS review name if version is present in file name (#2048)
* Show version in JS review name if version is present in file name

--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -9,6 +9,7 @@ trigger:
     include:
       - src/dotnet/APIView
       - src/java/apiview-java-processor
+      - src/ts/ts-genapi
       - packages/python-packages/api-stub-generator
       - packages/python-packages/protocol-stub-generator
 
@@ -23,6 +24,7 @@ pr:
     include:
       - src/dotnet/APIView
       - src/java/apiview-java-processor
+      - src/ts/ts-genapi
       - packages/python-packages/api-stub-generator
       - packages/python-packages/protocol-stub-generator
 
